objects/thankful__ThankfulActivity__c.object
<CustomObject>
    <fields>
        <fullName>thankful__Case__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Thankful Activities</relationshipLabel>
        <relationshipName>ThankfulActivities</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>thankful__Channel__c</fullName>
        <description>Represents the channel from which the Activity originated from. Used in Thankful API Integration</description>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>sms</fullName>
                    <label>SMS</label>
                </value>
                <value>
                    <fullName>web</fullName>
                    <label>Web</label>
                </value>
                <value>
                    <fullName>twitter</fullName>
                    <label>Twitter</label>
                </value>
                <value>
                    <fullName>inapp</fullName>
                    <label>In App</label>
                </value>
                <value>
                    <fullName>chat</fullName>
                    <label>Chat</label>
                </value>
                <value>
                    <fullName>api</fullName>
                    <label>API</label>
                </value>
                <value>
                    <fullName>facebook</fullName>
                    <label>Facebook</label>
                </value>
                <value>
                    <fullName>thankful_chat</fullName>
                    <label>Thankful Chat</label>
                </value>
                <value>
                    <fullName>email</fullName>
                    <label>Email</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>thankful__ContentRtf__c</fullName>
        <description>Message/Body of the Activity. Used in Thankful API Integration</description>
        <label>Content</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>thankful__Content__c</fullName>
        <description>Content -- DEPRECATED</description>
        <label>Content -- DEPRECATED</label>
        <length>64000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>thankful__From__c</fullName>
        <description>Represents the from which the Activity originated from. Used in Thankful API Integration</description>
        <label>From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>thankful__IsInternal__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Represents whether it is an internal Activity vs External. Used in Thankful API Integration</description>
        <label>Is Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>thankful__To__c</fullName>
        <description>Represents the email or phone # to which the message sent to. Used in Thankful API Integration</description>
        <label>To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>thankful__UserEmails__c</fullName>
        <description>Represents the Emails of the user who initiated the request. In case of multiple emails, separate the emails by 
&quot;|&quot;</description>
        <label>User Emails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>thankful__UserId__c</fullName>
        <description>Represents the Id of the User  by whom the Activity was initiated</description>
        <label>User Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>thankful__UserName__c</fullName>
        <description>Name of the User who initiated the Activity</description>
        <label>User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>thankful__UserPhones__c</fullName>
        <description>Represents the phone numbers of the user who initiated the Activity. In case of multiple phone numbers, use &quot;|&quot; seperator</description>
        <label>User Phones</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>thankful__UserType__c</fullName>
        <description>Represents the type of the user by whom the activity was initiated</description>
        <label>User Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>user</fullName>
                    <label>User</label>
                </value>
                <value>
                    <fullName>agent</fullName>
                    <label>Agent</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Thankful Activity</label>
    <listViews>
        <fullName>thankful__All</fullName>
        <columns>NAME</columns>
        <columns>thankful__Case__c</columns>
        <columns>thankful__Channel__c</columns>
        <columns>thankful__From__c</columns>
        <columns>thankful__IsInternal__c</columns>
        <columns>thankful__To__c</columns>
        <columns>thankful__UserEmails__c</columns>
        <columns>thankful__UserId__c</columns>
        <columns>thankful__UserName__c</columns>
        <columns>thankful__UserPhones__c</columns>
        <columns>thankful__UserType__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ACT-{000}</displayFormat>
        <label>Thankful Activity</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Thankful Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>